--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1958,3 +1958,47 @@ body {
     position: relative;
   }
 }
+.cid-qKpPEwhuPi {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background6.jpg");
+}
+.cid-qKpPEwhuPi h4 {
+  font-weight: 500;
+  color: #ffffff;
+}
+.cid-qKpPEwhuPi p {
+  color: #ffffff;
+}
+.cid-qKpPEwhuPi .card {
+  margin-bottom: 2rem;
+}
+.cid-qKpPEwhuPi .card-img {
+  border-radius: 0;
+  padding: 2rem 2rem 0 2rem;
+  background-color: #149dcc;
+}
+.cid-qKpPEwhuPi .card-img span {
+  font-size: 100px;
+  color: #ffffff;
+}
+.cid-qKpPEwhuPi .card-box {
+  padding-bottom: 2rem;
+  background-color: #149dcc;
+  background: linear-gradient(#149dcc, transparent);
+}
+.cid-qKpPEwhuPi .card-box .card-title {
+  margin: 0;
+  padding: 2rem 2rem 0 2rem;
+}
+.cid-qKpPEwhuPi .card-box .mbr-text {
+  margin-bottom: 0;
+  padding: 2rem 2rem 0 2rem;
+}
+.cid-qKpPEwhuPi .card-box .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qKpPEwhuPi .card-box .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
