--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1958,6 +1958,50 @@ body {
     position: relative;
   }
 }
+.cid-qKpPEcOPOR {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background6.jpg");
+}
+.cid-qKpPEcOPOR h4 {
+  font-weight: 500;
+  color: #ffffff;
+}
+.cid-qKpPEcOPOR p {
+  color: #ffffff;
+}
+.cid-qKpPEcOPOR .card {
+  margin-bottom: 2rem;
+}
+.cid-qKpPEcOPOR .card-img {
+  border-radius: 0;
+  padding: 2rem 2rem 0 2rem;
+  background-color: #149dcc;
+}
+.cid-qKpPEcOPOR .card-img span {
+  font-size: 100px;
+  color: #ffffff;
+}
+.cid-qKpPEcOPOR .card-box {
+  padding-bottom: 2rem;
+  background-color: #149dcc;
+  background: linear-gradient(#149dcc, transparent);
+}
+.cid-qKpPEcOPOR .card-box .card-title {
+  margin: 0;
+  padding: 2rem 2rem 0 2rem;
+}
+.cid-qKpPEcOPOR .card-box .mbr-text {
+  margin-bottom: 0;
+  padding: 2rem 2rem 0 2rem;
+}
+.cid-qKpPEcOPOR .card-box .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qKpPEcOPOR .card-box .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
 .cid-qKpPEwhuPi {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -2001,4 +2045,466 @@ body {
 .cid-qKpPEwhuPi .card-box .mbr-section-btn a {
   margin-top: 1rem;
   margin-bottom: 0;
+}
+.cid-qKpQfecUy4 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-qKpQfecUy4 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qKpQfecUy4 .mbr-text {
+  color: #767676;
+}
+.cid-qKpQfecUy4 .card {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.cid-qKpQfecUy4 .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qKpQfecUy4 .card-wrapper .card-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.cid-qKpQfecUy4 .card-wrapper .card-img .mbr-overlay {
+  background-color: #efefef;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-qKpQfecUy4 .card-wrapper .card-img .mbr-section-btn {
+  display: flex;
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+}
+.cid-qKpQfecUy4 .card-wrapper .card-img img {
+  width: 100%;
+  height: 100%;
+}
+.cid-qKpQfecUy4 .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-qKpQfecUy4 .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-qKpQfecUy4 .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-qKpQfecUy4 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-qKpQfecUy4 .popup-btn .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-qKpQfecUy4 .popup-btn .mbr-section-btn {
+  height: 100%;
+  display: flex !important;
+  opacity: 0;
+}
+.cid-qKpQfecUy4 .popup-btn:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-qKpQfecUy4 .popup-btn:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-qKpQhRSEb6 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+}
+.cid-qKpQhRSEb6 .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-qKpQhRSEb6 .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-qKpQhRSEb6 .card_cont {
+  -o-transition: all .5s;
+  -ms-transition: all .5s;
+  -moz-transition: all .5s;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  text-align: center;
+  background-color: #eee;
+}
+.cid-qKpQhRSEb6 .card-front {
+  z-index: 2;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.cid-qKpQhRSEb6 .card-front img {
+  min-height: 100%;
+  min-width: 100%;
+  width: auto;
+  max-width: 600px;
+}
+.cid-qKpQhRSEb6 .card_back {
+  width: 100%;
+  height: 100%;
+  padding: 30px 30px;
+  color: #ffffff;
+  background-color: #55b4d4;
+  z-index: 1;
+  margin: 0;
+  text-align: center;
+  overflow: hidden;
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+.cid-qKpQhRSEb6 .card {
+  min-height: 300px;
+}
+.cid-qKpQhRSEb6 .card:hover .card-front {
+  z-index: 1;
+  -o-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.cid-qKpQhRSEb6 .card:hover .card_back {
+  z-index: 2;
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -webkit-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+}
+.cid-qKpQhRSEb6 .builderCard .card_back {
+  border-bottom-left-radius: 100px;
+}
+.cid-qKpQhRSEb6 .builderCard .card_cont {
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidd;
+  -moz-backface-visibility: visible;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+.cid-qKpQjKDeqI {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #177396, #ca2955);
+}
+.cid-qKpQjKDeqI .list-group-item {
+  padding: .75rem 3.25rem;
+}
+.cid-qKpQjKDeqI .plan {
+  word-break: break-word;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
+  color: #767676;
+}
+.cid-qKpQjKDeqI .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  border: 0;
+}
+.cid-qKpQjKDeqI .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
+}
+.cid-qKpQjKDeqI .plan .list-group-item:last-child::after {
+  display: none;
+}
+.cid-qKpQjKDeqI .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-qKpQjKDeqI .plan-header,
+.cid-qKpQjKDeqI .plan-body {
+  background-color: #fff;
+}
+.cid-qKpQjKDeqI .price-figure {
+  font-weight: 700;
+  color: #232323;
+}
+.cid-qKpQjKDeqI .price-value {
+  font-weight: 700;
+  vertical-align: top;
+}
+@media (max-width: 550px) {
+  .cid-qKpQjKDeqI .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-qKpQmNQBAp {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qKpQmNQBAp .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-qKpQmNQBAp .number-wrap {
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-qKpQmNQBAp .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #ffffff;
+}
+.cid-qKpQmNQBAp .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-qKpQmNQBAp .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #ffffff;
+}
+.cid-qKpQmNQBAp .countdown-cont {
+  background: linear-gradient(45deg, #149dcc, #c8ceaf);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qKpQmNQBAp .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-qKpQmNQBAp .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-qKpQmNQBAp .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-qKpQmNQBAp .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-qKpQmNQBAp .number,
+  .cid-qKpQmNQBAp .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-qKpQmNQBAp .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-qKpQoO81Np {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #fafafa;
+}
+.cid-qKpQoO81Np .progress {
+  width: 100%;
+}
+.cid-qKpQoO81Np progress {
+  height: 8px;
+}
+.cid-qKpQoO81Np h3 {
+  text-align: center;
+  font-weight: 300;
+}
+.cid-qKpQoO81Np .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qKpQoO81Np .progress_value {
+  position: relative;
+}
+.cid-qKpQoO81Np .progress_elements {
+  margin: 0 auto;
+}
+.cid-qKpQoO81Np .title-wrap {
+  display: flex;
+  justify-content: space-between;
+}
+.cid-qKpQoO81Np .progress1 .progressbar-number:before,
+.cid-qKpQoO81Np .progress2 .progressbar-number:before,
+.cid-qKpQoO81Np .progress3 .progressbar-number:before,
+.cid-qKpQoO81Np .progress4 .progressbar-number:before {
+  position: absolute;
+  right: 15px;
+  top: 0;
+}
+.cid-qKpQoO81Np progress[value]::-webkit-progress-bar {
+  background: rgba(206, 206, 206, 0.4);
+}
+.cid-qKpQoO81Np progress::-webkit-progress-value {
+  background: #149dcc;
+}
+.cid-qKpQoO81Np progress[value]::-moz-progress-bar {
+  background: #149dcc;
+}
+.cid-qKpQoO81Np progress::-ms-fill {
+  background: #149dcc;
+}
+.cid-qKpQoO81Np .progress1 .progressbar-number:before {
+  content: '70';
+}
+.cid-qKpQoO81Np .progress2 .progressbar-number:before {
+  content: '80';
+}
+.cid-qKpQoO81Np .progress3 .progressbar-number:before {
+  content: '90';
+}
+.cid-qKpQoO81Np .progress4 .progressbar-number:before {
+  content: '100';
+}
+.cid-qKpQoO81Np .progress-primary {
+  background: rgba(206, 206, 206, 0.4);
+  border: none;
+  outline: none;
+}
+.cid-qKpQoO81Np .progress-primary::-webkit-progress-bar {
+  background: rgba(206, 206, 206, 0.4);
+}
+.cid-qKpQoO81Np .progress_value span {
+  padding-left: 30px;
+}
+.cid-qKpQs6o1pl {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/jumbotron.jpg");
+}
+.cid-qKpQs6o1pl .nav-tabs .nav-item.open .nav-link:focus,
+.cid-qKpQs6o1pl .nav-tabs .nav-link.active:focus {
+  outline: none;
+}
+.cid-qKpQs6o1pl .nav-tabs {
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  border-bottom: none;
+}
+.cid-qKpQs6o1pl .nav-tabs .nav-item {
+  padding: .5rem;
+}
+.cid-qKpQs6o1pl .nav-tabs .nav-link {
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 500;
+  border: 1px solid #ffffff;
+  transition: all .5s;
+}
+.cid-qKpQs6o1pl .nav-tabs .nav-link:hover {
+  cursor: pointer;
+  background-color: #149dcc;
+}
+.cid-qKpQs6o1pl .nav-tabs .nav-link.active {
+  font-weight: 500;
+  color: #ffffff;
+  font-style: normal;
+  background-color: #149dcc;
+  border-color: #149dcc;
+}
+.cid-qKpQs6o1pl .nav-tabs .nav-link.active:hover {
+  background-color: #149dcc;
+}
+.cid-qKpQs6o1pl p {
+  color: #ffffff;
+}
+.cid-qKpQs6o1pl .mbr-text {
+  text-align: center;
+}
+.cid-qKpQxFqtt3 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qKpQxFqtt3 .title {
+  margin-bottom: 2rem;
+}
+.cid-qKpQxFqtt3 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qKpQxFqtt3 a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-qKpQxFqtt3 a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-qKpQxFqtt3 .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-qKpQxFqtt3 .input-group-btn {
+  display: block;
+  text-align: center;
 }
